--- a/06_dom/01_one.html
+++ b/06_dom/01_one.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Learning</title>
+    <p>Hello</p>
 </head>
 <body>
     <div class="bg-black">
